ajout d'une fenetre + code comment

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="adresse">http://algec.iut-blagnac/~jmi/edt/INFO/edtTeacherS343.html</string>
     <string name="appName">EdT Moodle</string>
     <string name="dev_start">debut de conception : 22/10/2012</string>
+    <string name="info">informations</string>
+    <string name="retour">Retour</string>
 
 </resources>
