--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_main">EdT Moodle</string>
-    <string name="made_by">Sauvere, Bienvenu, Roman, Rouelle</string>
+    <string name="made_by">Benoît Sauvere, Remy Bienvenu, Hugo Roman, Jeremie Rouelle</string>
     <string name="adresse">http://algec.iut-blagnac/~jmi/edt/INFO/edtTeacherS343.html</string>
     <string name="appName">EdT Moodle</string>
     <string name="dev_start">Debut de conception : 22/10/2012</string>
@@ -16,5 +16,8 @@
 	<string name="fragment1_desc">Dans ce premier exemple le tableau est directement créé dans le layout et la bordure est gérée avec un objet drawable</string>
 	<string name="fragment2_desc">Toujours une déclaration essentiellement dans les fichiers layout mais avec cette fois une définition plus fine des bordures</string>
 	<string name="fragment3_desc">Je suis le fragment 3</string>
+	<string name="menu_about">A propos</string>
+	<string name="version">Version : 0.2 ALPHA PRE-RELEASE</string>
+	<string name="creator">Notre Equipe :</string>
 
 </resources>
