--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,26 +1,19 @@
 <resources>
 
-    <string name="app_name">EdT Moodle</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="menu_settings">Settings</string>
+    <string name="app_name">IUT Blagnac - EdT</string>
     <string name="title_activity_main">EdT Moodle</string>
     <string name="made_by">Benoît Sauvere, Remy Bienvenu, Hugo Roman, Jeremie Rouelle</string>
     <string name="adresse">http://algec.iut-blagnac/~jmi/edt/INFO/edtTeacherS343.html</string>
-    <string name="appName">EdT Moodle</string>
     <string name="dev_start">Debut de conception : 22/10/2012</string>
-    <string name="info">Informations</string>
-    <string name="retour">Retour</string>
-    <string name="buttonOK">OK</string>
-    <string name="buttonAnnuler">Annuler</string>
-    <string name="menu_param">paramètres</string>
-	<string name="fragment1_desc">Dans ce premier exemple le tableau est directement créé dans le layout et la bordure est gérée avec un objet drawable</string>
-	<string name="fragment2_desc">Toujours une déclaration essentiellement dans les fichiers layout mais avec cette fois une définition plus fine des bordures</string>
-	<string name="fragment3_desc">Je suis le fragment 3</string>
-	<string name="menu_about">A propos</string>
 	<string name="version">Version : 0.2 ALPHA PRE-RELEASE</string>
 	<string name="creator">Notre Equipe :</string>
+	
 	<string name="tab_today">Aujourd\'hui</string>
 	<string name="tab_week">Semaine</string>
 	<string name="tab_message">Messages</string>
+	
+	<string name="menu_parametres">Paramètres</string>
+	<string name="menu_refresh">Raraîchir</string>
+	<string name="menu_about">A propos</string>
 
 </resources>
