Nouvel écran "A propos"

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="title_activity_settings">Paramètres</string>
     
     <string name="made_by">Benoît Sauvere, Remy Bienvenu, Hugo Roman, Jérémie Rouelle</string>
-    <string name="dev_start">Projet Tuteuré 2013</string>
+    <string name="info_projet">Projet Tuteuré 2013 - IUT Blagnac - Université Toulouse II Le Mirail</string>
 	<string name="version">Version : 0.2 ALPHA PRE-RELEASE</string>
 	<string name="creator">Notre Equipe :</string>
 	
